--- a/leetCode.html
+++ b/leetCode.html
@@ -211,23 +211,33 @@ const getGroup = function(arr, count) {
     getGroup(arr.slice(mid), 1)
 };
 
-var allCellsDistOrder = function(R, C, r0, c0) {
-    const cells = [];
-    for(let i = 0; i<R; i++) {
-        for(let j = 0; j<C; j++) {
-            cells.push([i, j]);
-        }
+/**
+ * @param {number} a
+ * @param {number} b
+ * @param {number} c
+ * @return {number[]}
+ */
+var numMovesStones = function(a, b, c) {
+    [a, b, c] = [a, b, c].sort((a, b)=>a-b);
+    let dis1 = b-a;
+    let dis2 = c-b;
+    if(dis1<dis2) {
+        [dis1, dis2] = [dis2, dis1];
     }
-    cells.sort(([r1, c1], [r2, c2]) => {
-        return (Math.abs(r1-r0)+Math.abs(c1-c0)) - (Math.abs(r2-r0)+Math.abs(c2-c0));
-    });
+    if(dis2>2) {
+        dis3 = 2
+    }else if(dis2==2){
+        dis3 = 1;
+    }else {
+        dis3 = dis1>1 ? 1 : 0;
+    }
 
-    return cells;
+    return [dis3, dis1+dis2-2];
 };
-console.log(allCellsDistOrder(1, 2, 0, 0));//[[0,0],[0,1]]
-console.log(allCellsDistOrder(2, 2, 0, 1));//[[0,1],[0,0],[1,1],[1,0]]
-console.log(allCellsDistOrder(2, 3, 1, 2));//[[1,2],[0,2],[1,1],[0,1],[1,0],[0,0]]
-console.log(allCellsDistOrder(100, 100, 1, 2));//[[1,2],[0,2],[1,1],[0,1],[1,0],[0,0]]
-
+console.log(numMovesStones(1, 2, 5));//[1,2]
+console.log(numMovesStones(4, 3, 2));//[0,0]
+console.log(numMovesStones(1, 2, 4));//[1,1]
+console.log(numMovesStones(3, 5, 1));//[1,2]
+console.log(numMovesStones(1, 2, 6));//[1,3]
 </script>
 </body>
