--- a/leetCode.html
+++ b/leetCode.html
@@ -212,32 +212,23 @@ const getGroup = function(arr, count) {
 };
 
 /**
- * @param {number} a
- * @param {number} b
- * @param {number} c
- * @return {number[]}
+ * @param {number[][]} points
+ * @return {boolean}
  */
-var numMovesStones = function(a, b, c) {
-    [a, b, c] = [a, b, c].sort((a, b)=>a-b);
-    let dis1 = b-a;
-    let dis2 = c-b;
-    if(dis1<dis2) {
-        [dis1, dis2] = [dis2, dis1];
-    }
-    if(dis2>2) {
-        dis3 = 2
-    }else if(dis2==2){
-        dis3 = 1;
-    }else {
-        dis3 = dis1>1 ? 1 : 0;
-    }
-
-    return [dis3, dis1+dis2-2];
+var isBoomerang = function(points) {
+    const [[x1, y1], [x2, y2], [x3, y3]] = points;
+    let c1 = Math.sqrt(Math.pow((y1-y2), 2)+Math.pow((x1-x2), 2));
+    let c2 = Math.sqrt(Math.pow((y1-y3), 2)+Math.pow((x1-x3), 2));
+    let c3 = Math.sqrt(Math.pow((y2-y3), 2)+Math.pow((x2-x3), 2));
+    [c1, c2, c3] = [c1, c2, c3].sort((a, b)=>a-b);
+    return c1+c2>c3;
 };
-console.log(numMovesStones(1, 2, 5));//[1,2]
-console.log(numMovesStones(4, 3, 2));//[0,0]
-console.log(numMovesStones(1, 2, 4));//[1,1]
-console.log(numMovesStones(3, 5, 1));//[1,2]
-console.log(numMovesStones(1, 2, 6));//[1,3]
+
+console.log(isBoomerang([[1,1],[2,3],[3,2]]));//true
+console.log(isBoomerang([[1,1],[2,2],[3,3]]));//false
+console.log(isBoomerang([[0,1],[0,2],[0,3]]));//false
+console.log(isBoomerang([[1,0],[2,0],[3,0]]));//false
+console.log(isBoomerang([[0,0],[1,1],[1,1]]));//false
+console.log(isBoomerang([[0,0],[2,0],[0,2]]));//true
 </script>
 </body>
