--- a/leetCode.html
+++ b/leetCode.html
@@ -211,21 +211,29 @@ const getGroup = function(arr, count) {
     getGroup(arr.slice(mid), 1)
 };
 
-/**
- * @param {number[]} stones
- * @return {number}
- */
-var lastStoneWeight = function(stones) {
-    while(stones.length>1) {
-        stones.sort((a, b)=>a-b);
-        stones.splice(-2, 2, stones[stones.length-1]-stones[stones.length-2]);
+var removeDuplicates = function(S) {
+    while(true) {
+        let newS = S.replace(/([a-z])\1/g, "");
+        if(newS.length==S.length) {
+            break;
+        }
+        S = newS;
     }
 
-    return stones[0];
+    return S;
 };
+console.log(removeDuplicates("abbaca"));//ca
+console.log(removeDuplicates("aa"));//
+console.log(removeDuplicates("baab"));//
+console.log(removeDuplicates("aaabb"));//a
 
-console.log(lastStoneWeight([2,7,4,1,8,1]));//1
-console.log(lastStoneWeight([2]));//2
-console.log(lastStoneWeight([2, 2]));//1
+
+// var heightChecker = function(heights) {
+//     const oldHeights = [].concat(heights);
+//     heights.sort((a,b)=>a-b);
+//     return heights.reduce((count, v, i)=>count+(heights[i]==oldHeights[i]?0:1), 0);
+// };
+// console.log(heightChecker([1,1,4,2,1,3]));//3
+
 </script>
 </body>
