--- a/leetCode.html
+++ b/leetCode.html
@@ -211,29 +211,29 @@ const getGroup = function(arr, count) {
     getGroup(arr.slice(mid), 1)
 };
 
-var removeDuplicates = function(S) {
-    while(true) {
-        let newS = S.replace(/([a-z])\1/g, "");
-        if(newS.length==S.length) {
-            break;
-        }
-        S = newS;
-    }
+// var removeDuplicates = function(S) {
+//     while(true) {
+//         let newS = S.replace(/([a-z])\1/g, "");
+//         if(newS.length==S.length) {
+//             break;
+//         }
+//         S = newS;
+//     }
 
-    return S;
-};
-console.log(removeDuplicates("abbaca"));//ca
-console.log(removeDuplicates("aa"));//
-console.log(removeDuplicates("baab"));//
-console.log(removeDuplicates("aaabb"));//a
-
-
-// var heightChecker = function(heights) {
-//     const oldHeights = [].concat(heights);
-//     heights.sort((a,b)=>a-b);
-//     return heights.reduce((count, v, i)=>count+(heights[i]==oldHeights[i]?0:1), 0);
+//     return S;
 // };
-// console.log(heightChecker([1,1,4,2,1,3]));//3
+// console.log(removeDuplicates("abbaca"));//ca
+// console.log(removeDuplicates("aa"));//
+// console.log(removeDuplicates("baab"));//
+// console.log(removeDuplicates("aaabb"));//a
+
+
+var heightChecker = function(heights) {
+    const oldHeights = [].concat(heights);
+    heights.sort((a,b)=>a-b);
+    return heights.reduce((count, v, i)=>count+(heights[i]==oldHeights[i]?0:1), 0);
+};
+console.log(heightChecker([1,1,4,2,1,3]));//3
 
 </script>
 </body>
