--- a/leetCode.html
+++ b/leetCode.html
@@ -211,24 +211,47 @@ const getGroup = function(arr, count) {
     getGroup(arr.slice(mid), 1)
 };
 
-var gcdOfStrings = function(str1, str2) {
-    if(str1.length<str2.length) {//str2's length is smaller than str1's
-        [str1, str2] = [str2, str1];
-    }
-    for(let i = str2.length; i>0; i--) {
-        let subStr = str2.slice(0, i);
-        let reg = new RegExp(`^(${subStr}){1,}$`);
-        if(reg.test(str1) && reg.test(str2)) {
-            return subStr;
+/**
+ * @param {string[]} queries
+ * @param {string[]} words
+ * @return {number[]}
+ */
+var numSmallerByFrequency = function(queries, words) {
+    const f = (str) => {
+        let cache = {};
+        for(let ch of str) {
+            cache[ch] = (cache[ch] || 0) + 1;
         }
+
+        let minCh = "";
+        for(let ch in cache) {
+            if(!minCh || ch<minCh) {
+                minCh = ch;
+            }
+        }
+
+        return cache[minCh];
     }
 
-    return "";
+    const wordCache = [];
+    for(let word of words) {
+        wordCache.push(f(word));
+    }
+    wordCache.sort((a, b)=>b-a);
+
+    return queries.map(query=>{
+        let minCount = f(query);
+        for(var i = 0; i<wordCache.length; i++) {
+            if(minCount>=wordCache[i]) {
+                break;
+            }
+        }
+        return i;
+    });
 };
-console.log(gcdOfStrings("ABCABC", "ABC"));//ABC
-console.log(gcdOfStrings("ABABAB", "ABAB"));//AB
-console.log(gcdOfStrings("LEET", "CODE"));//
-console.log(gcdOfStrings("TAUXXTAUXXTAUXXTAUXXTAUXX","TAUXXTAUXXTAUXXTAUXXTAUXXTAUXXTAUXXTAUXXTAUXX"));//TAUXX
+console.log(numSmallerByFrequency(["cbd"], ["zaaaz"]));//[1]
+console.log(numSmallerByFrequency(["bbb","cc"], ["a","aa","aaa","aaaa"]));//[1,2]
+console.log(numSmallerByFrequency(["bba","abaaaaaa","aaaaaa","bbabbabaab","aba","aa","baab","bbbbbb","aab","bbabbaabb"], ["aaabbb","aab","babbab","babbbb","b","bbbbbbbbab","a","bbbbbbbbbb","baaabbaab","aa"]));//[6,1,1,2,3,3,3,1,3,2]
 
 </script>
 </body>
