--- a/leetCode.html
+++ b/leetCode.html
@@ -227,17 +227,17 @@ for(let i = 1; i<=100; i++) {
     primeCache[i] = isPrime(i);
 }
 
-var distanceBetweenBusStops = function(distance, start, destination) {
-   const allDistance = distance.reduce((a,b)=>a+b, 0);
-   if(start>destination) {
-       [start, destination] = [destination, start];
-   }
-   const aDistance = distance.slice(start, destination).reduce((a,b)=>a+b, 0);
-   return Math.min(aDistance, allDistance-aDistance);
+/**
+ * @param {number} day
+ * @param {number} month
+ * @param {number} year
+ * @return {string}
+ */
+var dayOfTheWeek = function(day, month, year) {
+    return ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"][(new Date(`${year}/${month}/${day}`)).getDay()];
 };
-console.log(distanceBetweenBusStops([1,2,3,4], 0, 1));//1
-console.log(distanceBetweenBusStops([1,2,3,4], 0, 2));//3
-console.log(distanceBetweenBusStops([1,2,3,4], 0, 3));//4
-console.log(distanceBetweenBusStops([1,2,3,4], 3, 0));//4
+console.log(dayOfTheWeek(31, 8, 2019));//Saturday
+console.log(dayOfTheWeek(18, 7, 1999));//Sunday
+console.log(dayOfTheWeek(15, 8, 1993));//Sunday
 </script>
 </body>
