--- a/leetCode.html
+++ b/leetCode.html
@@ -227,37 +227,25 @@ for(let i = 1; i<=100; i++) {
     primeCache[i] = isPrime(i);
 }
 
-const cache = [];
-var generateParenthesis = function(n) {
-    if(cache[n]) {
-        return cache[n];
+/**
+ * @param {ListNode} head
+ * @return {ListNode}
+ */
+var swapPairs = function(head) {
+    const root = new ListNode();
+    root.next = head;
+    head = root;
+    while(head.next && head.next.next) {
+        let tmp = head.next;
+        head.next = tmp.next;
+        tmp.next = tmp.next.next;
+        head.next.next = tmp;
+        head = tmp;
     }
-    let result = [];
-    switch(n) {
-        case 0:
-            result = [""];
-            break;
-        case 1:
-            result = ["()"];
-            break;
-        default:
-            for(let i = 1; i<n; i++) {
-                const a = generateParenthesis(i);
-                const b = generateParenthesis(n-i);
-                a.map(aa=>{result = result.concat(b.map(bb=>`${aa}${bb}`))})   
-                if(i==1) {
-                    result = result.concat(b.map(bb=>`(${bb})`));
-                }
-            }
-            break;
-    }
-    cache[n] = result.filter((v, i, a)=>a.indexOf(v)===i);
-    return cache[n];
+
+    return root.next;
 };
-console.log(generateParenthesis(3));
-console.log(generateParenthesis(4));
-// var a = generateParenthesis(4);
-// var b = ["(((())))","((()()))","((())())","((()))()","(()(()))","(()()())","(()())()","(())(())","(())()()","()((()))","()(()())","()(())()","()()(())","()()()()"].filter(v=>a.indexOf(v)==-1);
-// console.log(b);
+console.log(swapPairs(makeLink([1,2,3,4])));//2,1,4,3
+console.log(swapPairs(makeLink([1,2,3,4,5])));//2,1,4,3,5
 </script>
 </body>
