--- a/leetCode.html
+++ b/leetCode.html
@@ -227,36 +227,32 @@ for(let i = 1; i<=100; i++) {
     primeCache[i] = isPrime(i);
 }
 
-var nextPermutation = function(nums) {
+/**
+ * @param {number[]} nums
+ * @param {number} target
+ * @return {number}
+ */
+var search = function(nums, target) {
     let i;
-    for(i = nums.length-1; i>0; i--) {
-        if(nums[i]>nums[i-1]) {
-            break;
-        }
+    for(i = 0; i<nums.length-1 && nums[i]<nums[i+1] && nums[i]<target; i++) {}
+    if(nums[i]==target) {
+        return i;
     }
-    if(i==0) {//已经是最大的数了，返回最小的数
-        nums.sort((a, b)=>a-b);
-    }else {
-        let replace = nums[i-1];
-        let length = nums.length-i+1;
-        let tmp = nums.slice(-length);
-        let j = 0;
-        tmp.sort((a,b)=>a-b);
-        for(;j<tmp.length; j++) {
-            if(tmp[j]>replace) {
-                break;
-            }
-        }
-        nums[i-1] = tmp[j];
-        tmp.splice(j, 1);
-        nums.splice(i, length-1, ...tmp);
+    for(i = nums.length-1; i>0 && nums[i]>nums[i-1] && nums[i]>target; i--) {}
+    if(nums[i]==target) {
+        return i;
     }
 
-    return nums;//todo
+    return -1;
 };
-console.log(nextPermutation([1,2,3]));//1,3,2
-console.log(nextPermutation([3,2,1]));//1,2,3
-console.log(nextPermutation([1,1,5]));//1,5,1
-console.log(nextPermutation([1,1,1]));//1,1,1
+console.log(search([4,5,6,7,0,1,2], 0));//4
+console.log(search([4,5,6,7,0,1,2], 3));//-1
+console.log(search([4,5,6,7,0,1,2], 4));//0
+console.log(search([4,5,6,7,0,1,2], 2));//6
+console.log(search([0,1,2,4,5,6,7], 3));//-1
+console.log(search([0,1,2,4,5,6,7], 0));//0
+console.log(search([0,1,2,4,5,6,7], 7));//6
+console.log(search([0,1,2,4,5,6,7], 5));//4
+console.log(search([1], 1));//0
 </script>
 </body>
