--- a/leetCode.html
+++ b/leetCode.html
@@ -238,71 +238,29 @@ const binarySearch = (nums, target) => {
 };
 
 /**
- * @param {character[][]} board
- * @return {boolean}
+ * @param {number[]} candidates
+ * @param {number} target
+ * @return {number[][]}
  */
-var isValidSudoku = function(board) {
-    const isSubValid = (row)=>{
-        const cache = {};
-        for(let dg of row) {
-            if(dg!=="." && cache[dg]) {
-                return false;
-            }
-            cache[dg] = 1;
-        }
-
-        return true;
-    };
-    const isValid = (i, j) => {
-        if(!isSubValid(board[i])) {
-            return false;
-        }
-
-        if(!isSubValid(board.map(row=>row[j]))) {
-            return false;
-        }
-
-        const rowStart = ~~(i/3) * 3;
-        const colStart = ~~(j/3) * 3;
-        const arr = board.slice(rowStart, rowStart+3).reduce((arr,row)=>arr.concat(row.slice(colStart, colStart+3)), []);
-        if(!isSubValid(arr)) {
-            return false;
-        }
-
-        return true;
-    };
-
-    for(let i = 0; i<board.length; i++) {
-        for(let j = 0; j<board[i].length; j++) {
-            if(!isValid(i, j)) {
-                return false;
-            }
-        }
+var combinationSum = function(candidates, target) {
+    if(!candidates.length) {
+        return [];
     }
 
-    return true;
+    let arr1 = [];
+    if(target>candidates[0]) {
+        arr1 = combinationSum(candidates, target-candidates[0]);
+        if(arr1.length) {
+            arr1.forEach(v=>v.unshift(candidates[0]));
+        }
+    }else if(target==candidates[0]) {
+        arr1 = [[candidates[0]]];
+    }
+
+    let arr2 = combinationSum(candidates.slice(1), target);
+    return arr1.concat(arr2);
 };
-console.log(isValidSudoku([
-  ["5","3",".",".","7",".",".",".","."],
-  ["6",".",".","1","9","5",".",".","."],
-  [".","9","8",".",".",".",".","6","."],
-  ["8",".",".",".","6",".",".",".","3"],
-  ["4",".",".","8",".","3",".",".","1"],
-  ["7",".",".",".","2",".",".",".","6"],
-  [".","6",".",".",".",".","2","8","."],
-  [".",".",".","4","1","9",".",".","5"],
-  [".",".",".",".","8",".",".","7","9"]
-]));//true
-console.log(isValidSudoku([
-  ["8","3",".",".","7",".",".",".","."],
-  ["6",".",".","1","9","5",".",".","."],
-  [".","9","8",".",".",".",".","6","."],
-  ["8",".",".",".","6",".",".",".","3"],
-  ["4",".",".","8",".","3",".",".","1"],
-  ["7",".",".",".","2",".",".",".","6"],
-  [".","6",".",".",".",".","2","8","."],
-  [".",".",".","4","1","9",".",".","5"],
-  [".",".",".",".","8",".",".","7","9"]
-]));//false
+console.log(combinationSum([2,3,6,7], 7));//[[7],[2,2,3]]
+console.log(combinationSum([2,3,5], 8));//[[2,2,2,2],[2,3,3],[3,5]]
 </script>
 </body>
