--- a/leetCode.html
+++ b/leetCode.html
@@ -238,48 +238,51 @@ const binarySearch = (nums, target) => {
 };
 
 /**
- * @param {number[]} candidates
- * @param {number} target
- * @return {number[][]}
+ * @param {string} num1
+ * @param {string} num2
+ * @return {string}
  */
- function combinationSum2(candidates, target) {
-    var res = []; // [][]
-    var prefix = [];
-
-    candidates.sort((a, b) => a - b);
-    search(0, target);
-    return res;
-
-    function search(idx, rest) {
-        if (rest === 0) {
-            return res.push(prefix.slice());
-        }
-
-        if (rest < 0 || idx === candidates.length) {
-          return;
-        }
-
-        // include number at idx
-        prefix.push(candidates[idx]);
-        search(idx + 1, rest - candidates[idx]);
-        
-        // exclude number at idx
-        // eg. [1, 1, 1]
-        // allow 
-        // [1, 1, 1]
-        // [X, 1, 1]
-        // [X, X, 1]
-        // [X, X, X]
-        // disallow
-        // [1, 1, X]
-        // [1, X, X]
-        prefix.pop();
-        if (prefix[prefix.length - 1] !== candidates[idx]) {
-            search(idx + 1, rest);
-        }
+const add = function(num1, num2) {
+    let ret = '', carry = 0, i = num1.length - 1, j = num2.length - 1;
+    while (i >= 0 || j >= 0 || carry === 1) {
+        let n1 = i >= 0 ? num1[i--] : 0;
+        let n2 = j >= 0 ? num2[j--] : 0;
+        let sum = carry + n1 % 10 + n2 % 10;
+        carry = Math.trunc(sum / 10);
+        ret = (sum % 10) + ret;
     }
-}
-console.log(combinationSum2([10,1,2,7,6,1,5], 8));//[[1, 7],[1, 2, 5],[2, 6],[1, 1, 6]]
-console.log(combinationSum2([2,5,2,1,2], 5));//[[1,2,2],[5]]
+    return ret;
+};
+
+/**
+ * @param {string} num1
+ * @param {string} num2
+ * @return {string}
+ */
+var multiply = function(num1, num2) {
+    const mulDigit = (str1, d) => {
+        const result = [];
+        let carry = 0;
+        for(let i = num1.length-1; i>=0; i--) {
+            let tmp = parseInt(num1[i]) * parseInt(d) + carry;
+            carry = ~~(tmp/10);
+            result.unshift(tmp%10);
+        }
+        if(carry>0) {
+            result.unshift(carry);
+        }
+        return result.join("");
+    }
+    const arr = [];
+    for(let i = num2.length-1; i>=0; i--) {
+        arr.push(mulDigit(num1, num2[i])+(new Array(num2.length-i-1).fill("0").join("")));
+    }
+
+    return arr.reduce((a, b)=>add(a, b), "0").replace(/^0+(?!$)/, "");
+};
+console.log(multiply("2", "3"));//6
+console.log(multiply("123", "456"));//56088
+console.log(multiply("1234567891112233", "91234567891112233"));//112635268077866276397233802246289
+console.log(multiply("9133", "0"));//0
 </script>
 </body>
