--- a/leetCode.html
+++ b/leetCode.html
@@ -254,35 +254,40 @@ const add = function(num1, num2) {
     return ret;
 };
 
+const swap = (arr, i, j) => {
+    let tmp = arr[i];
+    arr[i] = arr[j];
+    arr[j] = tmp;
+};
+
 /**
- * @param {string} num1
- * @param {string} num2
- * @return {string}
+ * @param {number[]} nums
+ * @return {number[][]}
  */
-var multiply = function(num1, num2) {
-    const mulDigit = (str1, d) => {
-        const result = [];
-        let carry = 0;
-        for(let i = num1.length-1; i>=0; i--) {
-            let tmp = parseInt(num1[i]) * parseInt(d) + carry;
-            carry = ~~(tmp/10);
-            result.unshift(tmp%10);
+var permute = function(nums, size=0, index=0, result=[]) {
+    size = size || nums.length;
+    if(index>=size) {
+        result.push([...nums]);
+    }else {
+        for(let i = index; i<nums.length; i++) {
+            swap(nums, index, i);
+            permute(nums, size, index+1, result);
+            swap(nums, index, i);
         }
-        if(carry>0) {
-            result.unshift(carry);
-        }
-        return result.join("");
-    }
-    const arr = [];
-    for(let i = num2.length-1; i>=0; i--) {
-        arr.push(mulDigit(num1, num2[i])+(new Array(num2.length-i-1).fill("0").join("")));
     }
 
-    return arr.reduce((a, b)=>add(a, b), "0").replace(/^0+(?!$)/, "");
+    return result;
 };
-console.log(multiply("2", "3"));//6
-console.log(multiply("123", "456"));//56088
-console.log(multiply("1234567891112233", "91234567891112233"));//112635268077866276397233802246289
-console.log(multiply("9133", "0"));//0
+console.log(permute([1,2,3]));
+// [
+//   [1,2,3],
+//   [1,3,2],
+//   [2,1,3],
+//   [2,3,1],
+//   [3,1,2],
+//   [3,2,1]
+// ]
+
+//console.log(permute([0,1,2,3,4,5,6,7,8,9,10]));
 </script>
 </body>
