--- a/leetCode.html
+++ b/leetCode.html
@@ -264,21 +264,26 @@ const swap = (arr, i, j) => {
  * @param {number[]} nums
  * @return {number[][]}
  */
-var permute = function(nums, size=0, index=0, result=[]) {
+var permuteUnique = function(nums, size=0, index=0, result=[]) {
     size = size || nums.length;
     if(index>=size) {
         result.push([...nums]);
     }else {
+        const swapCache = {};
         for(let i = index; i<nums.length; i++) {
+            if(swapCache[nums[i]]) {
+                continue;
+            }
+            swapCache[nums[i]] = 1;
             swap(nums, index, i);
-            permute(nums, size, index+1, result);
+            permuteUnique(nums, size, index+1, result);
             swap(nums, index, i);
         }
     }
 
     return result;
 };
-console.log(permute([1,2,3]));
+// console.log(permuteUnique([1,2,3]));
 // [
 //   [1,2,3],
 //   [1,3,2],
@@ -287,7 +292,13 @@ console.log(permute([1,2,3]));
 //   [3,1,2],
 //   [3,2,1]
 // ]
-
-//console.log(permute([0,1,2,3,4,5,6,7,8,9,10]));
+// console.log(permuteUnique([1,1,2]));
+// [
+//   [1,1,2],
+//   [1,2,1],
+//   [2,1,1]
+// ]
+console.log(permuteUnique([2,2,1,1]));
+//[[1,1,2,2],[1,2,1,2],[1,2,2,1],[2,1,1,2],[2,1,2,1],[2,2,1,1]]
 </script>
 </body>
