--- a/leetCode.html
+++ b/leetCode.html
@@ -238,67 +238,43 @@ const binarySearch = (nums, target) => {
 };
 
 /**
- * @param {string} num1
- * @param {string} num2
- * @return {string}
+ * @param {number[][]} matrix
+ * @return {void} Do not return anything, modify matrix in-place instead.
  */
-const add = function(num1, num2) {
-    let ret = '', carry = 0, i = num1.length - 1, j = num2.length - 1;
-    while (i >= 0 || j >= 0 || carry === 1) {
-        let n1 = i >= 0 ? num1[i--] : 0;
-        let n2 = j >= 0 ? num2[j--] : 0;
-        let sum = carry + n1 % 10 + n2 % 10;
-        carry = Math.trunc(sum / 10);
-        ret = (sum % 10) + ret;
+ var rotate = function(matrix) {
+  for (var row = 0; row <= matrix.length-1; row++) {
+  var tracker = matrix.length-1;
+  
+    for (var j = matrix.length-1; j >= 0; j--) {
+      var current = matrix[row].pop();
+      matrix[tracker].unshift(current);
+      tracker--;
     }
-    return ret;
+  }
+  return matrix;
 };
-
-const swap = (arr, i, j) => {
-    let tmp = arr[i];
-    arr[i] = arr[j];
-    arr[j] = tmp;
-};
-
-/**
- * @param {number[]} nums
- * @return {number[][]}
- */
-var permuteUnique = function(nums, size=0, index=0, result=[]) {
-    size = size || nums.length;
-    if(index>=size) {
-        result.push([...nums]);
-    }else {
-        const swapCache = {};
-        for(let i = index; i<nums.length; i++) {
-            if(swapCache[nums[i]]) {
-                continue;
-            }
-            swapCache[nums[i]] = 1;
-            swap(nums, index, i);
-            permuteUnique(nums, size, index+1, result);
-            swap(nums, index, i);
-        }
-    }
-
-    return result;
-};
-// console.log(permuteUnique([1,2,3]));
+console.log(rotate([
+  [1,2,3],
+  [4,5,6],
+  [7,8,9]
+]));
 // [
-//   [1,2,3],
-//   [1,3,2],
-//   [2,1,3],
-//   [2,3,1],
-//   [3,1,2],
-//   [3,2,1]
+//   [7,4,1],
+//   [8,5,2],
+//   [9,6,3]
 // ]
-// console.log(permuteUnique([1,1,2]));
+
+console.log(rotate([
+  [ 5, 1, 9,11],
+  [ 2, 4, 8,10],
+  [13, 3, 6, 7],
+  [15,14,12,16]
+]));
 // [
-//   [1,1,2],
-//   [1,2,1],
-//   [2,1,1]
+//   [15,13, 2, 5],
+//   [14, 3, 4, 1],
+//   [12, 6, 8, 9],
+//   [16, 7,10,11]
 // ]
-console.log(permuteUnique([2,2,1,1]));
-//[[1,1,2,2],[1,2,1,2],[1,2,2,1],[2,1,1,2],[2,1,2,1],[2,2,1,1]]
 </script>
 </body>
