--- a/leetCode.html
+++ b/leetCode.html
@@ -239,24 +239,28 @@ const binarySearch = (nums, target) => {
 
 /**
  * @param {number[]} arr
- * @return {number[][]}
+ * @return {boolean}
  */
-var minimumAbsDifference = function(arr) {
+var uniqueOccurrences = function(arr) {
     const cache = {};
-    arr.sort((a,b)=>a-b);
-    for(let i = 0; i<arr.length-1; i++) {
-        const diff = arr[i+1] - arr[i];
-        cache[diff] = cache[diff] || [];
-        cache[diff].push([arr[i], arr[i+1]]);
+    for(let num of arr) {
+        cache[num] = (cache[num]||0) + 1;
+    }
+    const ocs = Object.values(cache);
+    const ocCache = {}
+    for(let oc of ocs) {
+        if(ocCache[oc]) {
+            return false;
+        }
+        ocCache[oc] = 1;
     }
 
-    const minDiff = Math.min(...Object.keys(cache));
-    return cache[minDiff];
+    return true;
 };
 
-console.log(minimumAbsDifference([4,2,1,3]));//[[1,2],[2,3],[3,4]]
-console.log(minimumAbsDifference([1,3,6,10,15]));//[[1,3]]
-console.log(minimumAbsDifference([3,8,-10,23,19,-4,-14,27]));//[[-14,-10],[19,23],[23,27]]
-console.log(minimumAbsDifference([1,3]));//[[1,3]]
+console.log(uniqueOccurrences([1,2,2,1,1,3]));//true
+console.log(uniqueOccurrences([1,2]));//false
+console.log(uniqueOccurrences([1]));//true
+console.log(uniqueOccurrences([-3,0,1,-3,1,1,1,-3,10,0]));//true
 </script>
 </body>
