--- a/leetCode.html
+++ b/leetCode.html
@@ -285,39 +285,46 @@ assertCompare.only = function(a, b) {
 };
 
 /**
- * @param {number[]} nums
- * @return {boolean}
+ * @param {number[][]} intervals
+ * @return {number[][]}
  */
-var canJump = function(nums) {
-    if(nums.length<2) {
-        return true;
+var merge = function(intervals) {
+    let arr = [];
+    const isCollided = function([aStart, aEnd], [bStart, bEnd]) {
+        return !(aEnd<bStart || aStart>bEnd);
     }
-    let start = 0;
-    let end = nums[0];
-    while(true) {
-        if(end>=nums.length-1) {
-            return true;
+    while(intervals.length>0) {
+        const interval = intervals.pop();
+        let collidedIndexes = [];
+        for(let i = 0; i<arr.length; i++) {
+            if(isCollided(arr[i], interval)) {
+                collidedIndexes.push(i);
+            }
         }
-        if(start==end) {
-            return false;
+
+        if(collidedIndexes.length>0) {
+            let min = interval[0];
+            let max = interval[1];
+            for(let collidedIndex of collidedIndexes) {
+                let [start, end] = arr[collidedIndex];
+                min = Math.min(min, start);
+                max = Math.max(max, end);
+                delete arr[collidedIndex];
+            }
+            arr = arr.filter(v=>!!v);
+            arr.push([min, max]);
+        }else {
+            arr.push(interval)
         }
-        let max = 0;
-        for(let i = start; i<=end; i++) {
-            max = Math.max(max, i+nums[i]);
-        }
-        start = Math.max(start+nums[start], start+1);
-        end = max;
     }
+
+    return arr;
+    
 };
 
-assertCompare(()=>canJump([0]), true);
-assertCompare(()=>canJump([1]), true);
-assertCompare(()=>canJump([0, 1]), false);
-assertCompare(()=>canJump([2,3,1,1,4]), true);
-assertCompare(()=>canJump([3,2,1,0,4]), false);
-assertCompare(()=>canJump([3,2,1,2,4,1,4,5,6,7,3,4,5,6,7,8,10]), true);
-assertCompare(()=>canJump([2,0,6,9,8,4,5,0,8,9,1,2,9,6,8,8,0,6,3,1,2,2,1,2,6,5,3,1,2,2,6,4,2,4,3,0,0,0,3,8,2,4,0,1,2,0,1,4,6,5,8,0,7,9,3,4,6,6,5,8,9,3,4,3,7,0,4,9,0,9,8,4,3,0,7,7,1,9,1,9,4,9,0,1,9,5,7,7,1,5,8,2,8,2,6,8,2,2,7,5,1,7,9,6]), false);
-assertCompare(()=>canJump([2,0,0]), true);
-assertCompare(()=>canJump([5,9,3,2,1,0,2,3,3,1,0,0]), true);
+assertCompare(()=>merge([]), []);
+assertCompare(()=>merge([[1,1]]), [[1,1]]);
+assertCompare(()=>merge([[1,3],[2,6],[8,10],[15,18]]), [[1,6],[8,10],[15,18]]);
+assertCompare.only(()=>merge([[1,4],[4,5]]), [[1,5]]);
 </script>
 </body>
